feat: bump to java 25