@@ -12,6 +12,10 @@ tasks.register("runSFCLI", JavaExec::class) {
   group = "application"
   description = "Runs the SoulFire client"
 
+  javaLauncher = javaToolchains.launcherFor {
+    languageVersion = JavaLanguageVersion.of(25)
+  }
+
   mainClass = projectMainClass
   classpath = sourceSets["main"].runtimeClasspath
 
@@ -20,13 +24,13 @@ tasks.register("runSFCLI", JavaExec::class) {
     "-XX:+EnableDynamicAgentLoading",
     "-XX:+UnlockExperimentalVMOptions",
     "-XX:+UseZGC",
-    "-XX:+ZGenerational",
+    "-XX:+UseCompactObjectHeaders",
     "-XX:+AlwaysActAsServerClassMachine",
     "-XX:+UseNUMA",
     "-XX:+UseFastUnorderedTimeStamps",
     "-XX:+UseVectorCmov",
     "-XX:+UseCriticalJavaThreadPriority",
-    "-Dsf.flags.v1=true",
+    "-Dsf.flags.v2=true",
     "-Dsf.remapToNamed=true"
   )
 
@@ -45,6 +49,10 @@ tasks.register("printSFCliFlags", JavaExec::class) {
   group = "application"
   description = "Runs the SoulFire client"
 
+  javaLauncher = javaToolchains.launcherFor {
+    languageVersion = JavaLanguageVersion.of(25)
+  }
+
   mainClass = projectMainClass
   classpath = sourceSets["main"].runtimeClasspath
   args = listOf(
@@ -56,13 +64,12 @@ tasks.register("printSFCliFlags", JavaExec::class) {
     "-XX:+EnableDynamicAgentLoading",
     "-XX:+UnlockExperimentalVMOptions",
     "-XX:+UseZGC",
-    "-XX:+ZGenerational",
     "-XX:+AlwaysActAsServerClassMachine",
     "-XX:+UseNUMA",
     "-XX:+UseFastUnorderedTimeStamps",
     "-XX:+UseVectorCmov",
     "-XX:+UseCriticalJavaThreadPriority",
-    "-Dsf.flags.v1=true"
+    "-Dsf.flags.v2=true"
   )
 
   if (System.getProperty("idea.active") != null) {
